--- a/src/locales/af-ZA.po
+++ b/src/locales/af-ZA.po
@@ -142,7 +142,7 @@ msgid "Allow high price impact trades and skip the confirm screen. Use at your o
 msgstr ""
 
 #: src/pages/Swap/index.tsx
-msgid "Allow the Niifi to use your {0}"
+msgid "Allow the NiiFi to use your {0}"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
