--- a/src/locales/it-IT.po
+++ b/src/locales/it-IT.po
@@ -147,7 +147,7 @@ msgid "Allow high price impact trades and skip the confirm screen. Use at your o
 msgstr "Consenti scambi ad alto impatto sui prezzi e salta la schermata di conferma. Usa a tuo rischio."
 
 #: src/pages/Swap/index.tsx
-msgid "Allow the Niifi to use your {0}"
+msgid "Allow the NiiFi to use your {0}"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -269,7 +269,7 @@ msgid "By adding this list you are implicitly trusting that the data is correct.
 msgstr "Aggiungendo questa lista ti senti implicitamente che i dati siano corretti. Chiunque può creare una lista, tra cui la creazione di versioni false di liste esistenti ed elenchi che affermano di rappresentare progetti che non ne hanno uno."
 
 #: src/components/WalletModal/index.tsx
-msgid "By connecting a wallet, you agree to Niifi <0>Terms of Service(coming soon)</0>"
+msgid "By connecting a wallet, you agree to NiiFi <0>Terms of Service(coming soon)</0>"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -312,7 +312,10 @@ msgstr "Chiudi"
 msgid "Closed"
 msgstr "Chiuso"
 
-#: src/pages/Dashboard/components/Card.tsx
+#: src/theme/index.tsx
+msgid "Coming Soon"
+msgstr ""
+
 #: src/pages/Discover/index.tsx
 msgid "Coming soon"
 msgstr ""
@@ -445,10 +448,6 @@ msgstr "Ignora"
 msgid "ETH"
 msgstr ""
 
-#: src/components/LineChart/swap.tsx
-msgid "ETH-ANY Pair Stats (Dummy data)"
-msgstr ""
-
 #: src/constants/tokens.ts
 msgid "EUR"
 msgstr ""
@@ -557,6 +556,10 @@ msgstr ""
 
 #: src/components/ErrorBoundary/index.tsx
 msgid "Get support on Discord"
+msgstr ""
+
+#: src/components/LineChart/swap.tsx
+msgid "Graph"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -792,7 +795,11 @@ msgid "New Pools"
 msgstr ""
 
 #: src/components/SwitchLocaleLink/index.tsx
-msgid "Niifi available in: <0>{0}</0>"
+msgid "NiiFi available in: <0>{0}</0>"
+msgstr ""
+
+#: src/components/PoolWithdraw/index.tsx
+msgid "No liquidity provided"
 msgstr ""
 
 #: src/pages/PoolFinder/index.tsx
@@ -864,7 +871,7 @@ msgid "Page {0} of {totalPages}"
 msgstr ""
 
 #: src/components/LineChart/PoolDetail.tsx
-msgid "Pair Stats (Dummy data)"
+msgid "Pair Stats"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -1067,6 +1074,7 @@ msgstr ""
 msgid "Sell"
 msgstr ""
 
+#: src/pages/Dashboard/BuySection.tsx
 #: src/pages/Dashboard/tabs/history/components/HistoryTable.tsx
 msgid "Send"
 msgstr ""
@@ -1189,9 +1197,8 @@ msgstr "Impossibile inviare la transazione perché il termine è scaduto. Si pre
 msgid "These tokens are commonly paired with other tokens."
 msgstr ""
 
-#: src/components/Table/TableToolbar.tsx
-#: src/pages/Dashboard/index.tsx
-msgid "This is Dummy Data"
+#: src/theme/index.tsx
+msgid "This feature is under development and will be"
 msgstr ""
 
 #: src/components/SearchModal/ImportToken.tsx
