--- a/src/locales/nl-NL.po
+++ b/src/locales/nl-NL.po
@@ -147,7 +147,7 @@ msgid "Allow high price impact trades and skip the confirm screen. Use at your o
 msgstr "Hoog prijsimpact transacties toestaan en het bevestigingsscherm overslaan. Gebruik op eigen risico."
 
 #: src/pages/Swap/index.tsx
-msgid "Allow the Niifi to use your {0}"
+msgid "Allow the NiiFi to use your {0}"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -269,7 +269,7 @@ msgid "By adding this list you are implicitly trusting that the data is correct.
 msgstr "Door deze lijst toe te voegen, vertrouwt u er impliciet op dat de gegevens juist zijn. Iedereen kan een lijst maken, inclusief het maken van nep-versies van bestaande lijsten en lijsten die beweren projecten te vertegenwoordigen die er geen hebben."
 
 #: src/components/WalletModal/index.tsx
-msgid "By connecting a wallet, you agree to Niifi <0>Terms of Service(coming soon)</0>"
+msgid "By connecting a wallet, you agree to NiiFi <0>Terms of Service(coming soon)</0>"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -312,7 +312,10 @@ msgstr "Afsluiten"
 msgid "Closed"
 msgstr "Gesloten"
 
-#: src/pages/Dashboard/components/Card.tsx
+#: src/theme/index.tsx
+msgid "Coming Soon"
+msgstr ""
+
 #: src/pages/Discover/index.tsx
 msgid "Coming soon"
 msgstr ""
@@ -445,10 +448,6 @@ msgstr "Uitschakelen"
 msgid "ETH"
 msgstr ""
 
-#: src/components/LineChart/swap.tsx
-msgid "ETH-ANY Pair Stats (Dummy data)"
-msgstr ""
-
 #: src/constants/tokens.ts
 msgid "EUR"
 msgstr ""
@@ -557,6 +556,10 @@ msgstr ""
 
 #: src/components/ErrorBoundary/index.tsx
 msgid "Get support on Discord"
+msgstr ""
+
+#: src/components/LineChart/swap.tsx
+msgid "Graph"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -792,7 +795,11 @@ msgid "New Pools"
 msgstr ""
 
 #: src/components/SwitchLocaleLink/index.tsx
-msgid "Niifi available in: <0>{0}</0>"
+msgid "NiiFi available in: <0>{0}</0>"
+msgstr ""
+
+#: src/components/PoolWithdraw/index.tsx
+msgid "No liquidity provided"
 msgstr ""
 
 #: src/pages/PoolFinder/index.tsx
@@ -864,7 +871,7 @@ msgid "Page {0} of {totalPages}"
 msgstr ""
 
 #: src/components/LineChart/PoolDetail.tsx
-msgid "Pair Stats (Dummy data)"
+msgid "Pair Stats"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -1067,6 +1074,7 @@ msgstr ""
 msgid "Sell"
 msgstr ""
 
+#: src/pages/Dashboard/BuySection.tsx
 #: src/pages/Dashboard/tabs/history/components/HistoryTable.tsx
 msgid "Send"
 msgstr ""
@@ -1189,9 +1197,8 @@ msgstr "De transactie kan niet worden verzonden omdat de deadline is verstreken.
 msgid "These tokens are commonly paired with other tokens."
 msgstr ""
 
-#: src/components/Table/TableToolbar.tsx
-#: src/pages/Dashboard/index.tsx
-msgid "This is Dummy Data"
+#: src/theme/index.tsx
+msgid "This feature is under development and will be"
 msgstr ""
 
 #: src/components/SearchModal/ImportToken.tsx
