--- a/src/locales/zh-CN.po
+++ b/src/locales/zh-CN.po
@@ -147,7 +147,7 @@ msgid "Allow high price impact trades and skip the confirm screen. Use at your o
 msgstr "允许高度影响价格的交易，并跳过确认步骤。须自行承担使用风险。"
 
 #: src/pages/Swap/index.tsx
-msgid "Allow the Niifi to use your {0}"
+msgid "Allow the NiiFi to use your {0}"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -269,7 +269,7 @@ msgid "By adding this list you are implicitly trusting that the data is correct.
 msgstr "添加此代币列表代表您信任其数据是正确的。任何人都可以创建代币列表，包括创建假冒实际列表的造假版本，以及自我声称代表了某项目的代币列表。"
 
 #: src/components/WalletModal/index.tsx
-msgid "By connecting a wallet, you agree to Niifi <0>Terms of Service(coming soon)</0>"
+msgid "By connecting a wallet, you agree to NiiFi <0>Terms of Service(coming soon)</0>"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -312,7 +312,10 @@ msgstr "关闭"
 msgid "Closed"
 msgstr "已关闭"
 
-#: src/pages/Dashboard/components/Card.tsx
+#: src/theme/index.tsx
+msgid "Coming Soon"
+msgstr ""
+
 #: src/pages/Discover/index.tsx
 msgid "Coming soon"
 msgstr ""
@@ -445,10 +448,6 @@ msgstr "关闭"
 msgid "ETH"
 msgstr ""
 
-#: src/components/LineChart/swap.tsx
-msgid "ETH-ANY Pair Stats (Dummy data)"
-msgstr ""
-
 #: src/constants/tokens.ts
 msgid "EUR"
 msgstr ""
@@ -557,6 +556,10 @@ msgstr ""
 
 #: src/components/ErrorBoundary/index.tsx
 msgid "Get support on Discord"
+msgstr ""
+
+#: src/components/LineChart/swap.tsx
+msgid "Graph"
 msgstr ""
 
 #: src/constants/tokens.ts
@@ -792,7 +795,11 @@ msgid "New Pools"
 msgstr ""
 
 #: src/components/SwitchLocaleLink/index.tsx
-msgid "Niifi available in: <0>{0}</0>"
+msgid "NiiFi available in: <0>{0}</0>"
+msgstr ""
+
+#: src/components/PoolWithdraw/index.tsx
+msgid "No liquidity provided"
 msgstr ""
 
 #: src/pages/PoolFinder/index.tsx
@@ -864,7 +871,7 @@ msgid "Page {0} of {totalPages}"
 msgstr ""
 
 #: src/components/LineChart/PoolDetail.tsx
-msgid "Pair Stats (Dummy data)"
+msgid "Pair Stats"
 msgstr ""
 
 #: src/components/BuyTokenModal/index.tsx
@@ -1067,6 +1074,7 @@ msgstr ""
 msgid "Sell"
 msgstr ""
 
+#: src/pages/Dashboard/BuySection.tsx
 #: src/pages/Dashboard/tabs/history/components/HistoryTable.tsx
 msgid "Send"
 msgstr ""
@@ -1189,9 +1197,8 @@ msgstr "由于期限已过，因此无法发送交易。请检查您的交易截
 msgid "These tokens are commonly paired with other tokens."
 msgstr ""
 
-#: src/components/Table/TableToolbar.tsx
-#: src/pages/Dashboard/index.tsx
-msgid "This is Dummy Data"
+#: src/theme/index.tsx
+msgid "This feature is under development and will be"
 msgstr ""
 
 #: src/components/SearchModal/ImportToken.tsx
